Fri Nov 22 17:11:26 2013  Narihiro Nakamura  <authornari@gmail.com>

	* include/ruby/intern.h, internal.h: Expose rb_gc_count().

Fri Nov 22 17:07:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.gemspec: version 1.2.2.

Fri Nov 22 17:04:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_data_type):
	  Use RUBY_TYPED_FREE_IMMEDIATELY only if it is available.

Fri Nov 22 16:49:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_power): Round the result value.
	  [Bug #8818] [ruby-core:56802]

	* test/bigdecimal/test_bigdecimal.rb: Add a test for the above fix.

Fri Nov 22 16:25:43 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (heap_set_increment): accept minimum additional page number.

	* gc.c (gc_after_sweep): allocate pages to allocate at least
	   RUBY_HEAP_MIN_SLOTS.
	   [Bug #9137]

Fri Nov 22 16:19:52 2013  Narihiro Nakamura  <authornari@gmail.com>

	* include/ruby/intern.h (rb_gc_set_params): Deprecate
	  rb_gc_set_params because it's only used in ruby internal.

	* internal.h (ruby_gc_set_params): Declare rb_gc_set_params's
	  alias function.

	* gc.c: ditto.

	* ruby.c: use ruby_gc_set_params.

Fri Nov 22 14:55:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigMath_s_exp): Insert rb_thread_check_ints.

Fri Nov 22 14:35:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (BigMath_s_exp): Fix the inserting points
	  of RB_GC_GUARDs.

Fri Nov 22 14:31:00 2013  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c: Fix indentation.

Fri Nov 22 14:03:00 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf: merge nkf 2.1.3 2a2f2c5.

Fri Nov 22 12:43:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (ruby_strtod): ignore too long fraction part, which does not
	  affect the result.

Fri Nov 22 12:17:14 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/lib/openssl/buffering.rb (OpenSSL::Buffering#initialize):